# photo-album-rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: ingest.py  query.py  retrieve.py
src/photo_rag/: __init__.py  app.py  clip_search.py  ingest.py  query.py  retrieve.py
tests/: conftest.py  test_ingest.py  test_retrieval.py
